# trade

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  guardrails.py  hedging_agent.py
src/analytics/: __init__.py  greeks.py  pricing.py  risk_metrics.py  scenarios.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  database.py  demo_data_service.py  market_data.py  models.py  seed_demo_data.py
src/execution/: __init__.py  order_manager.py  paper_trader.py
src/reporting/: __init__.py  alerts.py  generator.py
src/utils/: __init__.py  helpers.py  logging.py
tests/: __init__.py  test_greeks.py  test_pricing.py  test_risk_metrics.py
