[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-hedging-agent"
version = "0.1.0"
description = "Real-Time Risk Management and Autonomous Delta-Hedging Agent"
authors = [
    {name = "Anubhab Patnaik", email = "ap8909@nyu.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "schedule>=1.2.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "py-vollib>=1.0.1",
    "mibian>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
rl = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "torch>=2.1.0",
]

[project.scripts]
trading-bot = "src.main:main"
run-dashboard = "src.dashboard.app:run_server"
generate-report = "src.reporting.generator:generate_daily_report"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
